V7.0.72    
#####################################
1. Removed responsive grid for deals
2. Changed url to show path instead of _url in notifiers - KYC whatsapp bug fix
3. Help slide out, currently set to contact support msg only
4. Nested menus for fund reports btn
5. 


V7.0.71    
#####################################
1. Added latest flag to fund ratios
2. Added PI and Fund Ratios to API downloads
3. Better Fund Numbers screen


V7.0.70    
#####################################
1. Custom calcs in templates
2. Investor screen on mobile - bug fix
3. Grids now mobile friendly

V7.0.69    
#####################################
1. Moved uppy.js to inside caphive, file uploads should work inside Ambit now
2. Fixed remittance other fee, now KYC should have correct due amounts for Sirius
3. Dark theme for ag grid
4. Login via email, now retains the subdomain of the fund/entity 
5. Notifications lib Upgraded
6. Offer docs upload with Orignal Format
7. Login via email link remembers orignal location and redirects correctly
8. CF can be renamed via debug=true 
9. Added agreement_unit_type for Angel Funds

V7.0.65    
#####################################
1. Enable portfolios for investors
2. Increased bank name to 100 chars
3. Force_units for currency to enable fund specific numbers
4. Basic length validation for kyc form, even for fund inputs
5. Sorting of money cols for local data tables


22/12/2023 - V7.0.25    
#####################################
1. Made boolean fields in documents mandatory with defaults
2. Search documents for approval, email - bulk actions


22/12/2023 - V7.0.22    
#####################################
1. Refactored esign code, multiple esing emails, no users required
2. Added primary email to investor and entity
3. Call not visible to investors



15/12/2023 - V7.0.20    
#####################################
1. Added labels for Custom fields
2. Changing FCF name, causes data in models to changes
3. Upgraded to Sidekiq 7 for capsule functionality